# Seqly

./: .gitignore  LICENSE  README.md  pyproject.toml
script/: __main__.py  analyze.py  help.txt  main.py  pairwise.py  transform.py  utils.py
